--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 .Button {
+    margin-top: 10px;
     margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .Recipe {
     margin-top: 10px;
+    margin-bottom: 10px;
     margin-left: 10px;
     margin-right: 10px;
 }
