--- a/src/custom.scss
+++ b/src/custom.scss
@@ -2,7 +2,7 @@
 //$body-bg: #adb5bd;
 
 $theme-colors: (
-  "primary": rgb(99, 155, 235)
+  "primary": rgb(99, 155, 235),
 );
 
 // Import Bootstrap and its default variables
