--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,22 @@
     margin-right: 10px;
 }
 
-.Button {
+.CategoryButton {
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 3px;
+    margin-right: 3px;
 }
+
 .Container {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
+    border-top: 0px;
+    border-bottom: 0px;
+    border-left: 0px;
+    border-right: 0px;
+
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
     margin-right: 10px;
 
 }
