--- a/src/index.css
+++ b/src/index.css
@@ -7,29 +7,30 @@
     margin-right: 10px;
 }
 
+.RecipeButton {
+    width: 400px;
+    justify-content: center;
+}
+
 .CategoryButton {
-    margin-top: 10px;
-    margin-bottom: 10px;
     margin-left: 3px;
     margin-right: 3px;
 }
 
-.Container {
-    border-top: 0px;
-    border-bottom: 0px;
-    border-left: 0px;
-    border-right: 0px;
-
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 10px;
-
+.CategoryRow {
+    justify-content: center;
+    padding-left: 3px;
+    padding-right: 3px;
 }
-.CategoriesRow {
+
+.Container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: center;
+}
+
+.RecipeLinkRow {
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-
+    justify-content: center;
 }
