--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@
     justify-content: center;
 }
 
+.LoginRow {
+    margin-bottom: 10px;
+    margin-right: 3px;
+    padding-left: 3px;
+    padding-right: 3px;
+    justify-content: center;
+}
+
 .CategoryButton {
     margin-left: 3px;
     margin-right: 3px;
